Update Bolero and attempt html5 date picker

--- a/C#/SolarLunarName/SolarLunarName.Web.Client/wwwroot/main.html
+++ b/C#/SolarLunarName/SolarLunarName.Web.Client/wwwroot/main.html
@@ -14,10 +14,11 @@
 
       <template id="Home">
         <h1 class="title">Pick a date to Convert to SolarLunarDate Form.</h1>
-        ${GregorianDate}
+        ${GregorianDate1}
+        ${GregorianDate2}
         <p>
           <dl>
-            <dt>Gregorian Calendar Date:</dt>
+            <dt>Gregorian Calendar Date String:</dt>
             <dd>${GregorianDateString}</dd>
             <dt>SolarLunarDate:</dt>
             <dd>${SolarLunarDate}</dd>
