--- a/C#/SolarLunarName/SolarLunarName.Web.Client/wwwroot/index.html
+++ b/C#/SolarLunarName/SolarLunarName.Web.Client/wwwroot/index.html
@@ -6,6 +6,7 @@
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/datepicker.css">
   </head>
   <body>
     <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
