Import moon inspired template and font.

--- a/C#/SolarLunarName/SolarLunarName.Fable/src/index.html
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/index.html
@@ -7,9 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/favicon-32x32.ico" sizes="32x32" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon-16x16.ico" sizes="16x16" />
+	<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
+	<div class="circle-container">
+		<div class="circle">
+			<div class="semi-circle dark" ></div>
+			<div class="semi-circle light" ></div>
+		</div>
+	</div>
     <div id="elmish-app"></div>
 </body>
 
