--- a/C#/SolarLunarName/SolarLunarName.Fable/src/index.html
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/index.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
-	<div class="circle-container">
-		<div class="circle">
-			<div class="semi-circle dark" ></div>
-			<div class="semi-circle light" ></div>
+	<div class="wrapper"></div>
+		<div class="circle-container">
+			<div class="circle">
+				<div class="semi-circle dark" ></div>
+				<div class="semi-circle light" ></div>
+			</div>
 		</div>
 	</div>
     <div id="elmish-app"></div>
